src/components/indicators/editor.scss
.maxi-indicators {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	z-index: 2;
	transition: opacity 0.5s;

	&:hover {
		.maxi-indicators__padding {
			opacity: 1;

			.maxi-indicators__handle {
				background-color: #4517ff;
			}
		}
		.maxi-indicators__margin {
			opacity: 1;

			.maxi-indicators__handle {
				background-color: #ff4a17;
			}
		}
	}
	&__handle {
		opacity: 0;
		transition: all 0.5s;

		&:hover {
			opacity: 1;
		}
	}
	&__top-handle {
		top: -4px !important;
		height: 4px !important;
	}
	&__bottom-handle {
		bottom: -4px !important;
		height: 4px !important;
	}
	&__right-handle {
		right: -4px !important;
		width: 4px !important;
	}
	&__left-handle {
		left: -4px !important;
		width: 4px !important;
	}

	.maxi-indicators__margin,
	.maxi-indicators__padding {
		position: absolute;
		display: flex;
		justify-content: center;
		align-items: center;
		width: 100%;
		opacity: 0;
		transition: opacity 0.5s;

		span {
			font: 12px Roboto, sans-serif;
			position: absolute;
			top: 50%;
			right: 50%;
			transform: translate(-50%, -50%);
		}
		&--top {
			top: 0;
		}
		&--right {
			top: 0;
			right: 0;
			height: 100%;
			width: auto;

			span {
				transform: translate(50%, -50%);
			}
		}
		&--bottom {
			bottom: 0;
		}
		&--left {
			top: 0;
			left: 0;
			height: 100%;
			width: auto;

			span {
				transform: translate(50%, -50%);
			}
		}
	}
	.maxi-indicators__margin {
		background-color: #ffa48b;
		background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%237a7a7a' fill-opacity='0.2' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
		color: #222;
		z-index: 1;
		transition: background-color 0.5s;

		&:hover {
			background-color: #555;
			color: #fff;
		}
	}
	.maxi-indicators__padding {
		background-color: rgb(229 242 248 / 30%);
		background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='%237a7a7a' fill-opacity='0.1' fill-rule='evenodd'%3E%3Cpath d='M5 0h1L0 6V5zM6 5v1H5z'/%3E%3C/g%3E%3C/svg%3E");
		color: #9b9b9b;
		z-index: 2;
		transition: background-color 0.5s;
		opacity: 0.3;

		// &:hover {
		// 	background-color: #555;
		// 	color: #fff;
		// }
	}
}

